# telegram-claude-bridge

./: .env.example  .gitignore  README.md  install-service.sh  pyproject.toml  status.sh  uninstall-service.sh
bridge/: __init__.py  config.py  daemon.py  sessions.py  state.py  telegram_bot.py
hooks/: install.sh  permission_request.py  session_events.py
